TEST_PROGRAMS/VALID/05/structs.go
/* Structs. */

package main

func main() {
	type p struct {
		x, y, z int
	}

	var a p
	a.x = 1
	a.y = 2
	a.z = 3
}
