TEST_PROGRAMS/INVALID/09/assignment_mismatch.go
/* #id != #exp */
package error


func main() {
    var x, y int = 1, 2
    var (
        x = 2
        b = 1, 3
        a, _ = 3, 2
    )
}
